<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/thief_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:orientation="vertical" android:id="@id/statusbar_stub_view" android:background="@color/title_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="18.0dip" />
    <include android:id="@id/title_bar" layout="@layout/title" />
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <View android:background="@drawable/tai" android:layout_width="wrap_content" android:layout_height="100.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="1.0dip" android:layout_marginRight="16.0dip" />
        <TextView android:textSize="12.0sp" android:textColor="@color/dialog_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="30.0dip" android:text="@string/insurance_ad" />
        <View android:background="@color/dialog_button_divider" android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="16.0dip" />
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="286.0dip" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="#ffff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="8.0dip" android:text="@string/insurance_price1" />
            <TextView android:textSize="14.0sp" android:textColor="@color/dialog_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="8.0dip" android:text="@string/insurance_compensate1" />
            <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/purchase_insurance9" android:background="@drawable/button_selector" android:layout_width="45.0dip" android:layout_height="25.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/purchase_insurance" />
        </LinearLayout>
        <View android:background="@color/dialog_button_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" />
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="286.0dip" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="#ffff0000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="8.0dip" android:text="@string/insurance_price2" />
            <TextView android:textSize="14.0sp" android:textColor="@color/dialog_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0dip" android:layout_marginTop="8.0dip" android:text="@string/insurance_compensate2" />
            <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/purchase_insurance16" android:background="@drawable/button_selector" android:layout_width="45.0dip" android:layout_height="25.0dip" android:layout_marginLeft="37.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/purchase_insurance" />
        </LinearLayout>
        <View android:background="@color/dialog_button_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" />
        <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/purchase_viewbuy" android:background="@drawable/button_selector" android:layout_width="180.0dip" android:layout_height="25.0dip" android:layout_marginLeft="120.0dip" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/view_purchase" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="150.0dip">
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/insurance_service" />
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:paddingLeft="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/insurance_service_word" />
        <TextView android:textSize="12.0sp" android:textColor="#ff00bfff" android:autoLink="all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/service_tell" />
    </LinearLayout>
</LinearLayout>