<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="35.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="15.0sp" android:textColor="@color/dialog_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="30.0dip" android:text="@string/fraud_ad" />
    <View android:background="@drawable/claims_introduction" android:layout_width="250.0dip" android:layout_height="130.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" />
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="16.0dip">
        <TableRow android:id="@id/tablerow1" android:background="@drawable/shape_top_corner_no_bottom_line" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:minHeight="40.0dip" android:text="@string/customer_name" />
            <EditText android:textSize="14.0sp" android:id="@id/fraud_info_name" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:minHeight="30.0dip" android:maxLength="9" />
        </TableRow>
        <TableRow android:id="@id/tablerow_namecheck" android:background="@drawable/shape_top_corner_no_bottom_line" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/fraud_info_name_check" android:paddingLeft="1.0dip" android:visibility="gone" android:layout_width="100.0dip" android:minHeight="20.0dip" android:layout_column="1" />
        </TableRow>
        <TableRow android:id="@id/tablerow2" android:background="@drawable/shape_no_corner_without_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:minHeight="40.0dip" android:text="@string/idetify_id" />
            <EditText android:textSize="14.0sp" android:id="@id/fraud_info_id" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:minHeight="30.0dip" />
        </TableRow>
        <TableRow android:id="@id/tablerow_idcheck" android:background="@drawable/shape_no_corner_without_bottom" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/fraud_info_id_check" android:paddingLeft="1.0dip" android:visibility="gone" android:layout_width="wrap_content" android:minHeight="20.0dip" android:layout_column="1" />
        </TableRow>
        <TableRow android:id="@id/tablerow3" android:background="@drawable/shape_bottom_corner_no_top_line" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:minHeight="40.0dip" android:text="@string/phone_num" />
            <EditText android:textSize="14.0sp" android:id="@id/fraud_info_phone" android:paddingLeft="5.0dip" android:layout_width="200.0dip" android:minHeight="30.0dip" android:maxLength="18" android:numeric="integer" />
        </TableRow>
        <TableRow android:id="@id/tablerow_phonecheck" android:background="@drawable/shape_bottom_corner_no_top_line" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/fraud_info_phone_check" android:paddingLeft="1.0dip" android:visibility="gone" android:layout_width="100.0dip" android:minHeight="20.0dip" android:layout_column="1" />
        </TableRow>
    </TableLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="10.0dip">
        <CheckBox android:textSize="12.0sp" android:textColor="@color/text_info_color" android:id="@id/checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/agree_text" />
        <TextView android:textSize="12.0sp" android:textColor="@color/text_info_color" android:id="@id/fraud_standard" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fraud_sd_text" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="20.0dip">
        <TextView android:textSize="12.0sp" android:textColor="@color/text_info_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:text="@string/and" />
        <TextView android:textSize="12.0sp" android:textColor="@color/text_info_color" android:id="@id/zuk_fraud_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zuk_thief_text" />
    </LinearLayout>
    <TextView android:textSize="12.0sp" android:textColor="@color/text_info_color" android:id="@id/zuk_handset_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="3.0dip" android:text="@string/zuk_hanset_info_agree" />
    <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/open_fraudclaims_btn" android:background="@drawable/button_selector" android:layout_width="300.0dip" android:layout_height="40.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:text="@string/open_fraudclaims" />
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/insurance_service" />
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:paddingLeft="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/insurance_service_word" />
        <TextView android:textSize="12.0sp" android:textColor="#ff00bfff" android:autoLink="all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/service_tell" />
    </LinearLayout>
</LinearLayout>