<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/layout_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:orientation="vertical" android:id="@id/statusbar_stub_view" android:background="@color/title_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="18.0dip" />
    <include android:id="@id/title_bar" layout="@layout/title" />
    <ImageView android:id="@id/img_claim_apply_succ" android:paddingTop="70.0dip" android:layout_width="80.0dip" android:layout_height="100.0dip" android:src="@drawable/claims_complete" android:layout_below="@id/title_bar" android:layout_centerHorizontal="true" />
    <TextView android:textSize="15.0sp" android:textColor="#ff333333" android:id="@id/apply_success" android:paddingTop="18.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/apply_success" android:layout_below="@id/img_claim_apply_succ" android:layout_centerHorizontal="true" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="16.0dip" android:layout_below="@id/apply_success" android:layout_centerHorizontal="true">
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:id="@id/claims_number_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/claims_number" />
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:id="@id/claims_number" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="80.0dip" android:layout_alignParentBottom="true">
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:id="@id/tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips" />
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:id="@id/tips_context1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tips_context1" />
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:id="@id/tips_context2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="37.0dip" android:text="@string/tips_context2" />
        <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/claims_complete" android:background="@drawable/button_selector" android:layout_width="328.0dip" android:layout_height="44.0dip" android:text="@string/complete" />
    </LinearLayout>
</RelativeLayout>