<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:orientation="vertical" android:id="@id/statusbar_info_view" android:background="@color/title_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="18.0dip" />
    <include android:id="@id/title_bar" layout="@layout/title" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="10.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/thief_name_label" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginLeft="30.0dip" android:text="@string/customer_name" />
        <EditText android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/insurance_info_name" android:background="@drawable/edit_shape" android:paddingLeft="10.0dip" android:layout_width="200.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:minHeight="31.0dip" style="@style/DialogButtonStyle" />
    </LinearLayout>
    <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/thief_info_name_check" android:paddingLeft="100.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="20.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="10.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/thief_id_label" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginLeft="30.0dip" android:text="@string/idetify_id" />
        <EditText android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/insurance_info_personalID" android:background="@drawable/edit_shape" android:paddingLeft="10.0dip" android:layout_width="200.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:minHeight="31.0dip" android:editable="true" style="@style/CustomDialogStyle" />
    </LinearLayout>
    <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/thief_info_id_check" android:paddingLeft="100.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="20.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginTop="10.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/thief_phone_label" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginLeft="30.0dip" android:text="@string/phone_num" />
        <EditText android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/insurance_info_phone" android:background="@drawable/edit_shape" android:paddingLeft="10.0dip" android:layout_width="200.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:minHeight="31.0dip" android:editable="true" />
    </LinearLayout>
    <TextView android:textSize="14.0sp" android:textColor="@color/text_describe_color" android:gravity="center|left" android:id="@id/thief_info_phone_check" android:paddingLeft="100.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="20.0dip" />
    <Button android:textSize="15.0sp" android:textColor="#ffffffff" android:id="@id/now_purchase_claims" android:background="@drawable/button_selector" android:layout_width="300.0dip" android:layout_height="40.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="80.0dip" android:text="@string/purchase_now" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_marginTop="10.0dip">
        <CheckBox android:textSize="12.0sp" android:textColor="@color/text_info_color" android:id="@id/checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/agree_text" style="@style/UserInsurance_Theme" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="30.0dip">
        <TextView android:textSize="12.0sp" android:textColor="#ff000000" android:id="@id/thief_sd_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/thief_sd_text" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="30.0dip">
        <TextView android:textSize="12.0sp" android:textColor="@color/text_info_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/and" />
        <TextView android:textSize="12.0sp" android:textColor="@color/text_info_color" android:id="@id/zuk_thief_textview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zuk_thief_text" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip">
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/insurance_service" />
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:paddingLeft="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/insurance_service_word" />
        <TextView android:textSize="12.0sp" android:textColor="#ff00bfff" android:autoLink="all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/service_tell" />
    </LinearLayout>
</LinearLayout>