<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:orientation="vertical" android:id="@id/statusbar_info_view" android:background="@color/title_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="18.0dip" />
    <include android:id="@id/title_bar" layout="@layout/title" />
    <TextView android:textSize="18.0sp" android:textColor="@color/text_info_color" android:gravity="center" android:id="@id/order_redo_result" android:paddingLeft="30.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="50.0dip" />
    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/order_redo" android:background="@drawable/button_selector" android:visibility="visible" android:layout_width="300.0dip" android:layout_height="40.0dip" android:layout_marginLeft="16.0dip" android:layout_marginTop="100.0dip" />
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip">
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/insurance_service" />
        <TextView android:textSize="12.0sp" android:textColor="#ff999999" android:paddingLeft="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/insurance_service_word" />
        <TextView android:textSize="12.0sp" android:textColor="#ff00bfff" android:autoLink="all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/service_tell" />
    </LinearLayout>
</LinearLayout>